# halreslib

./: .env.dist  .gitignore  Cargo.toml  README.md  docker-compose.yaml  prompt-heise-Linux-Handheld-Mecha-Comet-ausprobiert.json  prompt-wikipedia-xslt.json
.config/: nextest.toml
crates/backend-ntex/: Cargo.toml
crates/database/: Cargo.toml
crates/database/migrations/: V1__schema.sql
crates/database/src/: error.rs  lib.rs
crates/database/src/snapshots/: database__tests__migrates_schema.snap
crates/frontend-leptos-csr/: Cargo.toml
crates/fullstack-axum-leptos-ssr/: Cargo.toml
crates/halreslib/: Cargo.toml
crates/halreslib/src/: main.rs
crates/inference/: Cargo.toml
crates/scraper/: Cargo.toml
docker/ollama/: entrypoint.sh
docker/rust/: Dockerfile
docker/rust/context/: entrypoint.sh
docker/traefik/: traefik.yaml
docker/traefik/dynamic/: dynamic.yaml
docker/traefik/tls/: _wildcard.halreslib.test-key.pem  _wildcard.halreslib.test.pem
scripts/docker/: build.sh  down.sh  logs.sh  pull.sh  up.sh
scripts/ollama/: file-prompt.sh  heise.sh  pandoc-heise.sh  prompt-heise-Linux-Handheld-Mecha-Comet-ausprobiert.json  prompt-pandoc-heise-Linux-Handheld-Mecha-Comet-ausprobiert.json  prompt-wikipedia-xslt.json  xslt.sh
scripts/rust/: clippy.sh  exec.sh  fmt.sh
scripts/test/: cov.sh  html-cov.sh  insta-review.sh  run.sh  watch.sh
